<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimary"
    tools:context=".AccountFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/space_96dp"
        android:layout_height="@dimen/space_96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_24dp"
        android:src="@mipmap/ic_profile_default" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginTop="@dimen/space_24dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="Sitthiphong Muntrima"
        android:textColor="?attr/textPrimary"
        android:textSize="@dimen/text_appearance_head_line_6" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:gravity="center_horizontal"
        android:text="jozzee@gmail.com"
        android:textColor="?attr/textSecond"
        android:textSize="@dimen/text_appearance_body_1" />

    <TextView
        android:id="@+id/account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginTop="@dimen/space_32dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:maxLines="1"
        android:text="@string/account_info"
        android:textColor="?attr/textDisabled"
        android:textSize="@dimen/text_appearance_head_line_6" />

    <RelativeLayout
        android:id="@+id/account_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_info"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:background="@drawable/bg_rounded"
        android:padding="@dimen/space_16dp">

        <!--<View-->
        <!--android:id="@+id/guideline_center"-->
        <!--android:layout_width="@dimen/space_0dp"-->
        <!--android:layout_height="@dimen/space_0dp"-->
        <!--android:layout_centerHorizontal="true" />-->

        <TextView
            android:id="@+id/title_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_8dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/first_name"
            android:textColor="?attr/textDisabled"
            android:textSize="@dimen/text_appearance_body_1" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_toEndOf="@+id/title_first_name"
            android:gravity="end"
            android:maxLines="1"
            android:text="Sitthiphong"
            android:textColor="?attr/textPrimary"
            android:textSize="@dimen/text_appearance_body_1" />

        <TextView
            android:id="@+id/title_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_first_name"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/first_name"
            android:textColor="?attr/textDisabled"
            android:textSize="@dimen/text_appearance_body_1" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_toEndOf="@+id/title_last_name"
            android:gravity="end"
            android:maxLines="1"
            android:text="Muntrima"
            android:textColor="?attr/textPrimary"
            android:textSize="@dimen/text_appearance_body_1" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_last_name"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="?attr/textDisabled"
            android:textSize="@dimen/text_appearance_body_1" />

        <TextView
            android:id="@+id/email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:layout_toEndOf="@+id/title_email"
            android:gravity="end"
            android:maxLines="1"
            android:text="Jozzee@gmail.com"
            android:textColor="?attr/textPrimary"
            android:textSize="@dimen/text_appearance_body_1" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edt_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:layout_marginBottom="@dimen/space_24dp"
        android:background="@drawable/bg_btn_edit_account"
        android:text="@string/edit"
        android:textColor="@android:color/white" />
</RelativeLayout>